--- a/06. 라우팅/01. fragment-version/index.html
+++ b/06. 라우팅/01. fragment-version/index.html
@@ -19,6 +19,6 @@
       <button data-navigate="/dummy">Dummy Page</button>
     </header>
     <main></main>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
