--- a/06. 라우팅/02. history-api-version/index.html
+++ b/06. 라우팅/02. history-api-version/index.html
@@ -19,6 +19,6 @@
       <a data-navigation href="/dummy">Dummy Page</a>
     </header>
     <main></main>
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
