--- a/06. 라우팅/03. navigo-library-version/index.html
+++ b/06. 라우팅/03. navigo-library-version/index.html
@@ -20,6 +20,6 @@
       <a data-navigo href="/dummy">Dummy Page</a>
     </header>
     <main></main>
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
